# ytdlp-microservice

./: .coverage  .dockerignore  .env.example  .gitignore  API_DESIGN.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
app/: __init__.py  cache.py  config.py  database.py  main.py  middleware.py  models.py  service.py  utils.py
docs/: API.md
migrations/: env.py
migrations/versions/: a6499f9a1da9_initial.py
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_database.py  test_middleware.py  test_real_videos.py  test_service.py  test_service_optimizations.py  test_stress.py  test_utils.py
